<resources>
    <string name="app_name">Clients</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Settings</string>
    <string name="search">Search</string>
    <string name="logo_desc">App logo</string>
    <string name="title_tab_0">Clients</string>
    <string name="title_tab_1">New Client</string>
    <string name="hello_world">Hello</string>
    <string name="first_name">Parent first name</string>
    <string name="second_name">Second name</string>
    <string name="save_new_client">Save</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="enter_second_name">Enter second name</string>
    <string name="sync">Sync</string>
    <string name="patronymic_name">Patronymic name</string>
    <string name="set_birth_day">BD:</string>
    <string name="ok">OK</string>
    <string name="date">2014-02-01</string>
    <string name="add_new_client">Add new client</string>
    <string name="first_name_is_mandatory_to_fill_in">First name is mandatory to fill in</string>
    <string name="second_name_is_mandatory_to_fill_in">Second name is mandatory to fill in</string>
    <string name="phone_number_is_to_short">Phone number is to short</string>
    <string name="photo_is_mandatory">Photo is mandatory</string>
    <string name="found">found</string>
    <string name="nothing">Nothing</string>
    <string name="need_permission">Need permission to work with app</string>
    <string name="syncing">Syncing ...</string>
    <string name="storage_unavailible">Storage is unavailable</string>
    <string name="name_test">Name test</string>
    <string name="second_name_test">Second name test</string>
    <string name="client_saved_success">New client saved successfully</string>
    <string name="child_first_name">Child first name</string>
    <string name="child_first_name_is_mandatory_to_fill_in">Child name is mandatory to fill in</string>
    <string name="choose_color">Choose color</string>
    <string name="abort">Cancel</string>
    <string name="found_clients">Found clients</string>
    <string name="last_visited">Last visited:</string>
    <string name="text_example">2014-02-01</string>
    <string name="visit_button">Visit</string>
    <string name="client_already_visited">Client has already visited today!</string>
    <string name="set_max_visits">Set visits</string>
    <string name="max_visits">Set Max visits</string>
    <string name="max_visits_hint">Max visits</string>
    <string name="visit_amount_error">Visits amount should be more than 0</string>
    <string name="reset_visit_counter">Reset visit counter</string>
    <string name="total_reload">Total reload</string>
    <string name="no_connection">No internet connection, try later.</string>
    <string name="data_base_reload">Data base reload</string>
    <string name="notice_db_reload">Are you sure, that you want to reload your data base?</string>
    <string name="syncing_finished_success">Syncing is successfully finished</string>
    <string name="syncing_failed">Syncing is failed</string>
    <string name="visits">Visits:</string>
    <string name="sync_url">Sync URL</string>
    <string name="https_protocol">https://www.</string>
    <string name="visit_dialog_message">Change max visits amount.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="error_settings_domain">Domain is not valid</string>
    <string name="error_settings_login">Login should be more than 5 symbols.</string>
    <string name="error_settings_password">Password should be more than 5 symbols.</string>
    <string name="error_settings_all">Need to set credentials before sync.</string>
</resources>
