<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alex.devops.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_color_pick"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="200"
        android:title="@string/choose_color"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_visits"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="200"
        android:title="@string/set_max_visits"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="200"
        android:title="@string/sync"
        app:showAsAction="never" />
</menu>