<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sync_dialog_domain_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <EditText
            android:id="@+id/sync_dialog_domain_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/sync_url"
            android:inputType="textUri"
            android:text="@string/https_protocol" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sync_dialog_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <EditText
            android:id="@+id/sync_dialog_login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/login"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sync_dialog_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <EditText
            android:id="@+id/sync_dialog_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>