<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/child_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:padding="10dp">

    <TextView
        android:id="@+id/pager_child_first_name_text_view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:text="@string/child_first_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_20_sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:text="@string/set_birth_day"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pager_birth_day_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:text="@string/date"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold" />
</LinearLayout>

