<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/child_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:padding="5dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/child_first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/child_first_name"
            android:lines="1"
            android:maxLength="12"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/set_birth_day"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/birth_day_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textSize="@dimen/text_18_sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

