<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/settings_dialog_root_layout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bordered"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_bordered_orange"
            android:gravity="center"
            android:padding="5dp"
            android:paddingBottom="10dp"
            android:text="@string/max_visits"
            android:textColor="@color/realWhite"
            android:textSize="@dimen/text_18_sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/settings_dialog_visit_count_edit_text_layout"
            android:layout_width="140dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_dialog_title"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/settings_dialog_visit_count_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/max_visits_hint"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_dialog_visit_count_edit_text_layout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center">

            <Button
                android:id="@+id/settings_dialog_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:text="@string/abort"
                android:textAllCaps="false"
                android:textColor="@color/orangeStrong"
                android:textSize="@dimen/text_20_sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/settings_dialog_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/orangeStrong"
                android:textSize="@dimen/text_20_sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>