<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/photo_fio_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp">

            <ImageView
                android:id="@+id/client_photo_image_view"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/photo_place_holder" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/second_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/second_name"
                        android:lines="1"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/first_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/first_name"
                        android:lines="1"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/patronymic_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/patronymic_name"
                        android:lines="1"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/phone_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/enter_phone_number"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:padding="5dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:text="@string/set_birth_day"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_18_sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birth_day_text_view"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="5dp"
                android:text="@string/date"
                android:textAllCaps="false"
                android:textSize="@dimen/text_18_sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/black" />
    </LinearLayout>
</ScrollView>