<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_fio_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/child_layout"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginLeft="@dimen/separator_margin"
        android:layout_marginRight="@dimen/separator_margin"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/client_photo_image_view"
            android:layout_width="180dp"
            android:layout_height="220dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/photo_place_holder" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/parent_first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/first_name"
                    android:lines="1"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/second_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/second_name"
                    android:lines="1"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/patronymic_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/patronymic_name"
                    android:lines="1"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:padding="5dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/free_space_view"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:visibility="gone" />
</LinearLayout>

